@@ -1,5 +1,10 @@
 2008-10-07  Mike Krüger <mkrueger@novell.com> 
 
+	* Gui/NRefactoryParameterDataProvider.cs: fixed 'Bug 432727 - No
+	  completion if no constructor'.
+
+2008-10-07  Mike Krüger <mkrueger@novell.com> 
+
 	* Gui/MemberCompletionData.cs, Gui/NRefactoryResolver.cs,
 	  Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 431382 - Code
 	  completion should strip Attribute suffix from classes deriving from
